Edit support ticket feature 50%

--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -54,6 +54,9 @@
                     <a class="navbar-item" href="{{ url_for('adminListings') }}">
                         Manage Listings
                     </a>
+                    <a class="navbar-item" href="{{ url_for('adminTickets') }}">
+                        Manage Tickets
+                    </a>
                 </div>
 
 
