--- a/templates/tourGuides/business.html
+++ b/templates/tourGuides/business.html
@@ -377,7 +377,7 @@
                             <div class='field'>
                     <label class="label" for="tour-starttime">Start Time</label>
                     <div class='control'>
-                        {{form.tour_starttime(class='input', id='tour-starttime', value=booking.book_time.split('-')[0], type='textarea')}}
+                        {{form.tour_starttime(class='input', id='tour-starttime', value=booking.book_time.split('-')[0], type='time')}}
                     </div>
                 </div>
 
