--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                             </a>
                         {% endif %}
                         {% if user.account_type == 1 %}
-                            <a class="navbar-item has-text-danger" href="{{ url_for('adminDashboard') }}">
+                            <a class="navbar-item has-text-danger" href="{{ url_for('adminUsers') }}">
                                 <i class="fas fa-arrow-right"></i>&ensp;Admin mode
                             </a>
                         {% endif %}
