--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -67,7 +67,7 @@
                     </a>
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-item">
-                            <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                            <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{ user.profile_img }}');"></div>
                         </a>
 
                         <div class="navbar-dropdown is-boxed is-right">
