--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -31,7 +31,7 @@
                     <div class="field">
                         <div class="control has-icons-left has-icons-right">
                             <!-- <input id="registerName" class="input" type="text" placeholder="Full Name"> -->
-                            {{ signupform.full_name(id="registerName", type="text", class="input", placeholder="Full Name") }}
+                            {{ signupform.full_name(id="registerName", type="text", class="input", placeholder="Full Name", required=True) }}
                             <span class="icon is-small is-left">
                             <i class="fas fa-user"></i>
                         </span>
@@ -40,7 +40,7 @@
                     <div class="field">
                         <div class="control has-icons-left has-icons-right">
                             <!-- <input id="registerEmail" class="input" type="text" placeholder="Email"> -->
-                            {{ signupform.email(id="registerEmail", type="email", class="input", placeholder="Email Address") }}
+                            {{ signupform.email(id="registerEmail", type="email", class="input", placeholder="Email Address", required=True) }}
                             <span class="icon is-small is-left">
                             <i class="fas fa-at"></i>
                         </span>
